# calamares-netrunner-rolling

./: README.md
conf/: bootloader.conf  settings.conf  users.conf
data/: calamares.desktop
src/branding/netrunner-rolling/: CMakeLists.txt  branding.desc  show.qml
src/branding/netrunner-rolling/lang/: CMakeLists.txt  calamares-netrunner-rolling_de.ts  calamares-netrunner-rolling_en.ts  calamares-netrunner-rolling_es.ts  calamares-netrunner-rolling_fr.ts  calamares-netrunner-rolling_it.ts
src/modules/postcfg/: main.py
